# chebfunjax

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  PLAN_V2.md  README.md  STATUS.md  mkdocs.yml  pixi.toml  project.conf  pyproject.toml
benchmarks/: RESULTS.md  bench_comparison.py  bench_core.py  bench_gpu.sh  bench_gpu_vmap.py  matlab_results.json  matlab_timing.m  python_results_cpu.json  python_results_gpu.json  python_results_gpu_vmap.json  summarize_results.py
docs/: api-design.md  api.md  architecture.md  index.md  install.md  jax-contract.md  quickstart.md  testing.md
examples/: generate_all_plots.py  run_all.py  run_all_check.py
matlab_harness/: generate_refs.m  run_chebfun_tests.m
notebooks/: chebfun_smoke.py
scripts/: AUDIT_REPORT.md  add_plots.py  audit_examples.py  audit_examples_v2.py  audit_page_parity.py  audit_results.csv  audit_results_v2.csv  audit_visual_parity.py  enable-auto-merge.sh  gen_approx_docs.py  generate_all_images.py  generate_guide01_plots.py  generate_guide02_plots.py  generate_guide03_plots.py  generate_guide04_plots.py  generate_guide05_plots.py  generate_guide06_plots.py  generate_guide07_plots.py  generate_guide08_plots.py  generate_guide09_plots.py  generate_guide10_plots.py  generate_guide11_plots.py  generate_guide12_plots.py  generate_guide13_plots.py  generate_guide14_plots.py  generate_guide15_plots.py  generate_guide16_plots.py  generate_guide17_plots.py  generate_guide18_plots.py  generate_guide19_plots.py  generate_guide20_3d.py  generate_guide20_plots.py  patch_examples.py  setup-branch-protection.sh  (+2 more)
site/: 404.html  (+2 more)
(+1017 files in other folders)
