[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chebfunjax"
version = "0.1.0"
description = "Chebfun in Python, powered by JAX"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Marc Aurèle Gilles" },
]
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "equinox>=0.11",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-xdist",
    "pytest-cov",
]
dev = [
    "chebfunjax[test]",
    "ruff",
]
gpu = [
    "jax[cuda12]>=0.4.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chebfunjax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
    "matlab: marks tests that compare against MATLAB reference outputs",
    "benchmark: performance benchmarks (informational)",
]

[tool.coverage.run]
source = ["chebfunjax"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
